--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,13 @@
     "name": "backend",
     "version": "1.0.0",
     "main": "index.js",
+    "type": "module",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     },
     "dependencies": {
-      "express": "^4.17.1"
+        "dotenv": "^16.4.7",
+        "express": "^4.17.1",
+        "mongodb": "^6.11.0"
     }
-  }
-  
+}
