Add volumes, add database service, and define startup order of services
- Add volumes for backend app and node_modules
- Add volumes for frontend app and node_modules
- Add service for MongoDB database
- Define startup order of services using depends_on
- Add command to backend to run seeding script to populate the database
before starting the server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,39 @@ services:
             - "5000:5000"
         networks:
             - app-network
+        volumes:
+            - ./backend:/app
+            - /app/node_modules # Persist node_modules inside container to avoid overwriting
+        depends_on:
+            - mongodb # Make sure the database is built
+        command: > # Run seeding script to populate the database first, then start the server
+            sh -c "node seed.js && node index.js"
 
-    webapp:
+    frontend:
         build:
-            context: ./webapp
+            context: ./frontend
             dockerfile: Dockerfile
         ports:
-            - "3000:3000"
+            - "5173:5173" # Changed to Vite default port
         networks:
             - app-network
+        volumes:
+            - ./frontend:/app
+            - /app/node_modules # Persist node_modules inside container to avoid overwriting
+        depends_on:
+            - backend # Make sure that the backend is built and running
+
+    mongodb: # Code shamelessly copied from dbwebb
+        image: mongo
+        environment:
+        - MONGO_DATA_DIR=/data/db
+        volumes:
+        - ./data/db:/data/db
+        ports:
+        - "27017:27017"
+        command: mongod --bind_ip_all
+        networks:
+        - app-network
 
 networks:
     app-network:
