--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
         volumes:
             - ./frontend:/app
             - /app/node_modules # Persist node_modules inside container to avoid overwriting
+        # Uncomment the lines below if file watching is not working as expected!
+        # environment:
+        #     - CHOKIDAR_USEPOLLING=true
         depends_on:
             - backend # Make sure that the backend is built and running
 
