Add scheme for the Linking feature
The scheme is a unique identifier for the app used by the Linking API to handle deep links.
Tells Expo how to link to the app.

--- a/mobileapp-customer/app.json
+++ b/mobileapp-customer/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "mobileapp-customer",
     "slug": "mobileapp-customer",
+    "scheme": "mobileapp-customer",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
