--- a/mobileapp-customer/package.json
+++ b/mobileapp-customer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobileapp-customer",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,8 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/bottom-tabs": "^7.1.3",
-    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.17",
     "expo-blur": "^14.0.1",
     "expo-constants": "^17.0.3",
@@ -39,7 +39,9 @@
     "@babel/core": "^7.20.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
-    "react-test-renderer": "18.3.1"
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.3.3",
+    "@types/react": "~18.3.12"
   },
   "private": true
 }
