--- a/mobileapp-customer/package.json
+++ b/mobileapp-customer/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "babel-preset-expo": "^12.0.4",
     "expo": "~52.0.18",
     "expo-blur": "^14.0.1",
     "expo-constants": "^17.0.3",
@@ -29,6 +30,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
