Add usage of .env file
In the service mobileapp-customer, add environment variable ${IP} as REACT_NATIVE_PACKAGER_HOSTNAME.
This means that the user must create an .env file in the project root, and set their local ipv4 as 'IP', in the following format:

IP=192.168.XX.XX

in order to run the service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
             - app-network
         environment:
             # Enter your own local ip-address below, find it in the terminal with 'hostname -I'
-            REACT_NATIVE_PACKAGER_HOSTNAME: "192.168.50.83"
+            REACT_NATIVE_PACKAGER_HOSTNAME: "${IP}"
             REACT_APP_API_URL: "http://backend:5000"
         volumes:
             - ./mobileapp-customer:/app
