--- a/mobileapp-customer/Dockerfile
+++ b/mobileapp-customer/Dockerfile
@@ -18,4 +18,6 @@ COPY . .
 # - 8081: Metro Bundler, used for React Native bundling
 EXPOSE 19006 19001 19002 8081
 
+# Using tunnel to avoid problems with localhost
+# Alternative command: CMD ["npm", "start"]
 CMD ["npx", "expo", "start", "--", "--tunnel"]
