--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
         image: mongo
         environment:
             - MONGO_DATA_DIR=/data/db
+            # !! Need to be updated
             #- MONGO_DSN=${MONGO_DSN}
             #- MONGO_URI=${MONGO_URI}
         volumes:
