--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.17.1",
-        "mongodb": "^6.11.0"
+        "http": "^0.0.1-security",
+        "mongodb": "^6.11.0",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
