--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.3.0"
   }
 }
