--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
+        "@faker-js/faker": "^9.3.0",
         "eslint": "^9.16.0",
         "nodemon": "^3.1.7"
     }
