--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
         build:
             context: ./backend
             dockerfile: Dockerfile
+        environment:
+            - MONGO_DSN=${MONGO_DSN}
+            - MONGO_URI=${MONGO_URI}
         ports:
             - "5000:5000"
         networks:
@@ -37,9 +40,6 @@ services:
         image: mongo
         environment:
             - MONGO_DATA_DIR=/data/db
-            # !! Need to be updated
-            #- MONGO_DSN=${MONGO_DSN}
-            #- MONGO_URI=${MONGO_URI}
         volumes:
             - ./data/db:/data/db
         ports:
