--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,23 @@ services:
         depends_on:
             - backend # Make sure that the backend is built and running
 
+    webapp:
+        build:
+            context: ./webapp
+            dockerfile: Dockerfile
+        ports:
+            - "3000:3000" # Changed to Vite default port
+        networks:
+            - app-network
+        volumes:
+            - ./webapp:/app
+            - /app/node_modules # Persist node_modules inside container to avoid overwriting
+        # Uncomment the lines below if file watching is not working as expected!
+        # environment:
+        #     - CHOKIDAR_USEPOLLING=true
+        depends_on:
+            - backend # Make sure that the backend is built and running
+
     mongodb: # Need to create.env
         image: mongo
         environment:
