--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,23 @@ services:
         depends_on:
             - backend # Make sure that the backend is built and running
 
+    frontend_customer:
+        build:
+            context: ./frontend_customer
+            dockerfile: Dockerfile
+        ports:
+            - "1337:1337" # Changed to Vite default port
+        networks:
+            - app-network
+        volumes:
+            - ./frontend_customer:/app
+            - /app/node_modules # Persist node_modules inside container to avoid overwriting
+        # Uncomment the lines below if file watching is not working as expected!
+        # environment:
+        #     - CHOKIDAR_USEPOLLING=true
+        depends_on:
+            - backend # Make sure that the backend is built and running
+
     webapp:
         build:
             context: ./webapp
