--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
