--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
             - mongodb # Make sure the database is built
         command:
             > # Run seeding script to populate the database first, then start the server
-            sh -c "node ./config/seed.js && npm run nodemon"
+            sh -c "node ./database_config/seed.js && npm run nodemon"
 
     frontend:
         build:
