--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
             - mongodb # Make sure the database is built
         command:
             > # Run seeding script to populate the database first, then start the server
-            sh -c "node ./data-generation/index.js node && ./database-config/seed.js && npm run nodemon"
+            sh -c "node ./data-generation/index.js node && node ./database-config/seed.js && npm run nodemon"
 
     frontend:
         build:
