--- a/bike-brain/package.json
+++ b/bike-brain/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "eslint": "^9.16.0",
     "socket.io-client": "^4.8.1"
   },
