--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -30,6 +32,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
-    "vite": "^6.0.7"
+    "jsdom": "^26.0.0",
+    "vite": "^6.0.7",
+    "vitest": "^2.1.8"
   }
 }
