Adjust for interactivity with simulation client in container shell
- Add installation of tini to allow for interactivity in container shell.

--- a/bike-brain/Dockerfile
+++ b/bike-brain/Dockerfile
@@ -6,4 +6,7 @@ COPY . .
 
 RUN npm install
 
-CMD ["node", "sim-from-database.js"]
+RUN apt-get update && apt-get install -y tini && apt-get clean
+ENTRYPOINT [ "/usr/bin/tini", "--"]
+
+CMD ["node", "cli.js"]
