--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,10 @@
         "dotenv": "^16.4.7",
         "express": "^4.17.1",
         "http": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.11.0",
+        "passport": "^0.7.0",
+        "passport-github2": "^0.1.12",
         "socket.io": "^4.8.1"
     },
     "devDependencies": {
