Remove usage of cli.js, add instructions to start scripts directly.

--- a/bike-brain/Dockerfile
+++ b/bike-brain/Dockerfile
@@ -9,4 +9,4 @@ RUN npm install
 RUN apt-get update && apt-get install -y tini && apt-get clean
 ENTRYPOINT [ "/usr/bin/tini", "--"]
 
-CMD ["node", "cli.js"]
+CMD ["/bin/sh"]
