--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         environment:
             - MONGO_DSN=${MONGO_DSN}
             - MONGO_URI=${MONGO_URI}
-            # - NODE_ENV=simulation # Test for data generation for simulation
+            - NODE_ENV=simulation # Test for data generation for simulation
         ports:
             - "5000:5000"
             - "5001:5001"
