--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
