--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,110 +1,106 @@
 version: 1
 
-# Define the build environment
 build:
-  nodes:
-    analysis:
-      image: node:18  # Specify the Docker image to use for the CI environment
-      services:
-        - mongodb:
-            image: mongo
-            environment:
-              - MONGO_URI=mongodb://mongo:27017
-            volumes:
-              - ./data/db:/data/db
-            networks:
-              - app-network
-            ports:
-              - "27017:27017"
-        
-        - backend:
-            name: "backend"  # Add a name here
-            build:
-              context: ./backend
-              dockerfile: Dockerfile
-            environment:
-              - MONGO_DSN=${MONGO_DSN}
-              - MONGO_URI=${MONGO_URI}
-              - CLIENT_ID=${CLIENT_ID}
-              - CLIENT_SECRET=${CLIENT_SECRET}
-              - REDIRECT_URI=${REDIRECT_URI}
-              - JWT_SECRET=${JWT_SECRET}
-              - REDIRECT_URI_FRONTEND=${REDIRECT_URI_FRONTEND}
-              - NODE_ENV=simulation
-            volumes:
-              - ./backend:/app
-              - /app/node_modules
-            networks:
-              - app-network
-            depends_on:
-              - mongodb
-            command: >
-              sh -c "node ./data-generation/index.js && node ./database-config/seed.js && npm run nodemon"
+  image: node:18
+  services:
+    - mongodb:
+        image: mongo
+        environment:
+          - MONGO_URI=mongodb://mongo:27017
+        volumes:
+          - ./data/db:/data/db
+        networks:
+          - app-network
+        ports:
+          - "27017:27017"
 
-        - frontend:
-            name: "frontend"  # Add a name here
-            build:
-              context: ./frontend
-              dockerfile: Dockerfile
-            ports:
-              - "5173:5173"
-            networks:
-              - app-network
-            volumes:
-              - ./frontend:/app
-              - /app/node_modules
-            depends_on:
-              - backend
-        
-        - frontend_customer:
-            name: "frontend_customer"  # Add a name here
-            build:
-              context: ./frontend_customer
-              dockerfile: Dockerfile
-            ports:
-              - "1337:1337"
-            networks:
-              - app-network
-            volumes:
-              - ./frontend_customer:/app
-              - /app/node_modules
-            depends_on:
-              - backend
+    - backend:
+        name: "backend"
+        build:
+          context: ./backend
+          dockerfile: Dockerfile
+        environment:
+          - MONGO_DSN=${MONGO_DSN}
+          - MONGO_URI=${MONGO_URI}
+          - CLIENT_ID=${CLIENT_ID}
+          - CLIENT_SECRET=${CLIENT_SECRET}
+          - REDIRECT_URI=${REDIRECT_URI}
+          - JWT_SECRET=${JWT_SECRET}
+          - REDIRECT_URI_FRONTEND=${REDIRECT_URI_FRONTEND}
+          - NODE_ENV=simulation
+        volumes:
+          - ./backend:/app
+          - /app/node_modules
+        networks:
+          - app-network
+        depends_on:
+          - mongodb
+        command: >
+          sh -c "node ./data-generation/index.js && node ./database-config/seed.js && npm run nodemon"
 
-        - webapp:
-            name: "webapp"  # Add a name here
-            build:
-              context: ./webapp
-              dockerfile: Dockerfile
-            ports:
-              - "3000:3000"
-            networks:
-              - app-network
-            volumes:
-              - ./webapp:/app
-              - /app/node_modules
-            depends_on:
-              - backend
-        
-        - simulation:
-            name: "simulation"  # Add a name here
-            build:
-              context: ./bike-brain
-              dockerfile: Dockerfile
-            environment:
-              - BIKE_TOKEN=${BIKE_TOKEN}
-            networks:
-              - app-network
-            stdin_open: true
-            tty: true
-            depends_on:
-              - backend
-            command: /bin/sh
-            volumes:
-              - ./bike-brain:/app
-              - /app/node_modules
+    - frontend:
+        name: "frontend"
+        build:
+          context: ./frontend
+          dockerfile: Dockerfile
+        ports:
+          - "5173:5173"
+        networks:
+          - app-network
+        volumes:
+          - ./frontend:/app
+          - /app/node_modules
+        depends_on:
+          - backend
 
-  # Commands to run during the build process
+    - frontend_customer:
+        name: "frontend_customer"
+        build:
+          context: ./frontend_customer
+          dockerfile: Dockerfile
+        ports:
+          - "1337:1337"
+        networks:
+          - app-network
+        volumes:
+          - ./frontend_customer:/app
+          - /app/node_modules
+        depends_on:
+          - backend
+
+    - webapp:
+        name: "webapp"
+        build:
+          context: ./webapp
+          dockerfile: Dockerfile
+        ports:
+          - "3000:3000"
+        networks:
+          - app-network
+        volumes:
+          - ./webapp:/app
+          - /app/node_modules
+        depends_on:
+          - backend
+
+    - simulation:
+        name: "simulation"
+        build:
+          context: ./bike-brain
+          dockerfile: Dockerfile
+        environment:
+          - BIKE_TOKEN=${BIKE_TOKEN}
+        networks:
+          - app-network
+        stdin_open: true
+        tty: true
+        depends_on:
+          - backend
+        command: /bin/sh
+        volumes:
+          - ./bike-brain:/app
+          - /app/node_modules
+
   commands:
     - cd backend && npm install
     - cd frontend && npm install
@@ -112,8 +108,8 @@ build:
     - cd webapp && npm install
     - cd bike-brain && npm install
 
-  # Tests to run during the build process
-tests:
+  # Properly structured tests section with indentation
+  tests:
     - name: "Backend Tests"
       after: true
       command: "cd backend && npm test"
